added 2 new columns + fixed methods + added new DTOs
