# docs/swagger.yaml
@@ -14,6 +14,21 @@ definitions:
     properties:
       age:
         type: integer
+      date_added:
+        type: string
+      description:
+        type: string
+      price:
+        type: number
+      type:
+        $ref: '#/definitions/model.Type'
+    type: object
+  model.PostPet:
+    properties:
+      age:
+        type: integer
+      description:
+        type: string
       price:
         type: number
       type:
@@ -59,7 +74,7 @@ paths:
         name: pet
         required: true
         schema:
-          $ref: '#/definitions/model.Pet'
+          $ref: '#/definitions/model.PostPet'
       produces:
       - application/json
       responses:
